# ai-agents-masterclass

./: .gitignore  .tool-versions  LICENSE  README.md  pyproject.toml
1-first-agent/: .env.example  agents.py  requirements.txt
10-deploy-ai-agent-langserve/: .env.example  langserve-chatbot.py  langserve-endpoints.py  requirements.txt  runnable.py
10-deploy-ai-agent-langserve/tools/: google_drive_tools.py  vector_db_tools.py
2-langchain-agent/: langchain-agent.py  requirements.txt
3-agent-ui/: .env.example  agent-with-ui.py  requirements.txt
4-task-management-agent/: .env.example  requirements.txt  task-management-agent.py
5-rag-agent/: .env.example  local-rag-agent.py  requirements.txt
5-rag-agent/meeting_notes/: 2024-07-20.txt  2024-07-21.txt  2024-07-22.txt
6-rag-task-agent/: .env.example  rag-document-loader.py  rag-task-agent.py  requirements.txt
7-langgraph-agent/: langgraph-task-management-agent.py  requirements.txt  runnable.py  tools.py
8-n8n-asana-agent/: .env.example  n8n-asana-agent.py  n8n_Workflow_Asana_AI_Agent.json  n8n_Workflow_Create_Asana_Task.json  requirements.txt
9-n8n-rag-agent/: n8n_Workflow_Add_Google_Drive_File_to_Vector_DB_Webhook.json  n8n_Workflow_RAG_AI_Agent.json
cost-saving-ai-router/: .env.example  cost-saving-task-agent.py  requirements.txt
gohighlevel-saas-backend/: .firebaserc  .gitignore  firebase.json
gohighlevel-saas-backend/functions/: package-lock.json  package.json
gohighlevel-saas-backend/functions/src/: emulator_conversation_langchain.js  ghl_conversation_langchain.js  helpers.js  index.js  location_knowledge_base.js  textualy_graph.js  textualy_tools.js
korvus-simple-rag/: .env.example  korvus_rag.py  requirements.txt
llama3-function-calling-agent/: .env.example  llama3-task-agent.py  requirements.txt
llm-agent-evaluation-framework/: .env.example  llm-eval-chatbot.py  requirements.txt  runnable.py
llm-agent-evaluation-framework/tools/: asana_tools.py  google_drive_tools.py  vector_db_tools.py
local-ai-packaged/: .env.example  Local_RAG_AI_Agent_n8n_Workflow.json  README.md  docker-compose.yml  n8n_pipe.py
local-ai-packaged/flowise/: Web Search + n8n Agent Chatflow.json  create_google_doc-CustomTool.json  get_postgres_tables-CustomTool.json  send_slack_message_through_n8n-CustomTool.json  summarize_slack_conversation-CustomTool.json
local-ai-packaged/n8n-tool-workflows/: Create_Google_Doc.json  Get_Postgres_Tables.json  Post_Message_to_Slack.json  Summarize_Slack_Conversation.json
local-ai-packaged/n8n/backup/workflows/: Local_RAG_AI_Agent_n8n_Workflow.json
local-llm-tool-calling/: .env.example  local-agent-with-ui.py  requirements.txt
local-or-managed-llm-rag/: LocalVSManagedLLMRAG.drawio
local-swarm-agent/: .env.example  ai-news-complete-mock-data.sql  ai-news-complete-tables.sql  load_sql_data.py  requirements.txt  run.py  sql_agents.py
madlibs/: madlibs.py  requirements.txt
n8n-langchain-agent/: .env.example  n8n-langchain-agent.py  requirements.txt  tools.py
n8n-langchain-agent-advanced/: n8n-langchain-agent.py  requirements.txt  runnable.py
n8n-rag-pdfs-excel/: Supabase_RAG_AI_Agent_PDFs_Excel.json
n8n-streamlit-agent/: Supabase_RAG_AI_Agent_Basic_Auth.json  Supabase_RAG_AI_Agent_Supabase_Auth.json  n8n-streamlit-agent-basic-auth.py  n8n-streamlit-agent.py  prompts.txt  requirements.txt
o1-ai-agent/: .env.example  o1-ai-agent.py  requirements.txt
pydantic-ai/: .env.example  README.md  requirements.txt  streamlit_ui.py  web_search_agent.py  web_search_agent_streamlit.py
sql-ai-agent/: requirements.txt  run.py  sql_agents.py
streamlit-chatbot/: .env.example  streamlit-chatbot.py
supabase-n8n-rag-agent/: Supabase_RAG_AI_Agent.json
v0-agent-frontend/: Prompts.txt  Supabase_RAG_AI_Agent_n8n_Workflow.json
v0-agent-frontend/v0-agent-frontend/: .env.local.example  components.json  package-lock.json  package.json  tailwind.config.ts
v0-agent-frontend/v0-agent-frontend/app/: globals.css  page.tsx
v0-agent-frontend/v0-agent-frontend/app/auth/callback/: route.ts
v0-agent-frontend/v0-agent-frontend/components/: ai-agent-chatbot.tsx
v0-agent-frontend/v0-agent-frontend/components/ui/: button.tsx
